--- a/src/Trouve/BlogBundle/Resources/views/Index/index.html.twig
+++ b/src/Trouve/BlogBundle/Resources/views/Index/index.html.twig
@@ -1,6 +1,9 @@
+{% extends '::base.html.twig' %}
+{% block body %}
 <h1>Liste des posts</h1>
 <ul>
     {% for post in tabPosts %}
     <li class="{{ (loop.index is odd) ? 'odd' : 'even'}}"style="{{post.isPublish ? true : 'color:red;'}}">{{post.title}}</li>
     {% endfor %}
 </ul>
+{%endblock%}
