--- a/src/Trouve/BlogBundle/Resources/views/Index/index.html.twig
+++ b/src/Trouve/BlogBundle/Resources/views/Index/index.html.twig
@@ -2,8 +2,8 @@
 {% block body %}
 <h1>Liste des posts</h1>
 <ul>
-    {% for post in tabPosts %}
-    <li class="{{ (loop.index is odd) ? 'odd' : 'even'}}"style="{{post.isPublish ? true : 'color:red;'}}">{{post.title}}</li>
+    {% for post in posts %}
+    <li class="{{ (loop.index is odd) ? 'odd' : 'even'}}"style="{{post.is_publish ? true : 'color:red;'}}">{{post.title}}</li>
     {% endfor %}
 </ul>
 {%endblock%}
