--- a/src/Trouve/BlogBundle/Resources/views/New/form.html.twig
+++ b/src/Trouve/BlogBundle/Resources/views/New/form.html.twig
@@ -1,1 +1,12 @@
-{{form(form)}}
+{% extends '::base.html.twig' %}
+{% block body %}
+
+    {% for key, flashArray in app.session.flashBag.all() %}
+        {% for flash in flashArray %}
+            <div class=""alert alert-{{ key }}">{{ flash }}</div>
+        {% endfor %}
+    {% endfor %}
+
+    {{form(form)}}
+        
+{%endblock%}
