--- a/src/Trouve/AdminBundle/Resources/views/base_admin_navbar.html.twig
+++ b/src/Trouve/AdminBundle/Resources/views/base_admin_navbar.html.twig
@@ -9,8 +9,9 @@
       <div class="nav-collapse collapse">
           {% block profile %}
           <ul id="profile-nav" class="nav pull-right profile">
+             {% if app.user %} 
               <li><p class="navbar-text">{{ 'profile.welcome'|trans({'%username%': app.user ? app.user : 'anonymous'}, 'Admingenerator')|raw }}</p></li>
-          {% if app.user %}
+          
               {% if admingenerator_config('logout_path') is not null %}
               <li class="btn-group">
                   {% if admingenerator_config('exit_path') is not null and is_granted('ROLE_PREVIOUS_ADMIN') %}
@@ -34,7 +35,9 @@
           {% endif %}
           </ul>
           {% endblock %}
-          {% block menu %}{{ knp_menu_render('TrouveAdminBundle:Builder:mainMenu') }}{% endblock %}
+          {% if app.user %}
+            {% block menu %}{{ knp_menu_render('TrouveAdminBundle:Builder:mainMenu') }}{% endblock %}
+          {% endif %}
       </div><!--/.nav-collapse -->
     </div><!--/.container -->
   </div><!--/.navbar-inner -->
