--- a/src/Trouve/BlogBundle/Resources/views/New/form.html.twig
+++ b/src/Trouve/BlogBundle/Resources/views/New/form.html.twig
@@ -1,4 +1,4 @@
-{% extends '::base.html.twig' %}
+{% extends 'TrouveBlogBundle::layout.html.twig' %}
 {% block body %}
 
     {% for key, flashArray in app.session.flashBag.all() %}
@@ -6,7 +6,8 @@
             <div class=""alert alert-{{ key }}">{{ flash }}</div>
         {% endfor %}
     {% endfor %}
-
+            
     {{form(form)}}
         
 {%endblock%}
+            
