--- a/src/Trouve/BlogBundle/Resources/views/Index/index.html.twig
+++ b/src/Trouve/BlogBundle/Resources/views/Index/index.html.twig
@@ -6,11 +6,8 @@
 <div class="blog-post">
 
     {% for post in posts %}
-        {% if post.is_publish %}
-    <h2 class="blog-post-title"><a href="{{ path('trouve_blog_postShow', {'slug': post.slug }) }}">{{post.title}}</a></h2>
-    <p class="blog-post-meta">{{post.created|date('j/m/Y')}} by <a href="#">admin</a></p>
-            <p>{{ post.body | truncate(150, true, '... ') }}<a href="#">Lire la suite</a></p>
-       {% endif %}
+        
+            {% include 'TrouveBlogBundle:Post:inline.html.twig' %}
  {% endfor %}
 </div>
 {%endblock%}
